<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/coordinates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_spacing"

        android:text="@string/latitude"
        app:layout_constraintBottom_toBottomOf="@id/latitudeValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinates" />

    <TextView
        android:id="@+id/latitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_spacing"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@id/edit"
        app:layout_constraintStart_toEndOf="@id/latitude"
        app:layout_constraintTop_toTopOf="@id/latitude" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_spacing"
        android:text="@string/longitude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude" />

    <TextView
        android:id="@+id/longitudeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_spacing"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit"
        app:layout_constraintStart_toEndOf="@id/longitude"
        app:layout_constraintTop_toTopOf="@id/longitude" />

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/small_spacing"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/remove"
        app:layout_constraintTop_toTopOf="@+id/latitudeValue" />

    <ImageButton
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/remove"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/latitudeValue" />

</androidx.constraintlayout.widget.ConstraintLayout>